# Coverage_path_planning

./: CMakeLists.txt  README.md  package.xml
cpp_uav/script/: utw.py
include/: torres_etal_2016.hpp
launch/: coverage_path_utw.launch  cpp_uav.launch
planes/: A400m_cola.txt  A400m_cola_trajectory.txt  example.txt  result.txt
planes/Planos cpp/: A400M_ala-dcha.txt  A400M_ala-izq.txt  A400M_cockpit_Semiplano.txt  A400M_cockpit_plano.txt  A400M_cola_Semiplano.txt  A400M_cola_plano.txt  A400M_top-fuselaje.txt  A400m_cola_trajectory.txt
script/: utw.py
src/: torres_etal_2016.cpp
